# antislop-labs

./: LICENSE  README.md  authors.txt
_default/: authors.txt
ai_actually_irish/: authors.txt
keep_the_kitchen_clean/: authors.txt
lizards_brains/: .gitignore  .prettierignore  architecture.md  authors.txt  eslint.config.js  goals.md  package-lock.json  package.json  plan.md  vitest.config.ts
lizards_brains/src/: app.css  app.html
lizards_brains/src-tauri/: Cargo.toml  tauri.conf.json
lizards_brains/src-tauri/capabilities/: default.json
lizards_brains/src-tauri/icons/: icon.icns
lizards_brains/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  timer.rs
lizards_brains/src-tauri/src/mcp/: tools.rs  transport.rs
lizards_brains/src/lib/: api.ts  sounds.ts  types.ts
lizards_brains/src/lib/components/: History.svelte  SessionList.svelte  Timer.svelte
lizards_brains/src/lib/stores/: timer.test.ts  timer.ts
lizards_brains/src/routes/: +page.svelte
lizards_brains/src/tests/: setup.ts  smoke.test.ts
pied_piper/: authors.txt
