[package]
name = "pomodoro-ai"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rmcp = { version = "0.1", features = ["server", "transport-io"] }
thiserror = "2"
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
